--- a/frontend2/src/pages/Room/room.css
+++ b/frontend2/src/pages/Room/room.css
@@ -36,7 +36,7 @@
 }
 
 .rooms-section {
-	padding: 60px 0;
+	padding: 10px 0;
 }
 
 .room-item {
@@ -48,8 +48,8 @@
 }
 
 .room-item img {
-	width: 100%;
-	height: auto;
+	width: 355px;
+	height: 235px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
@@ -131,6 +131,7 @@
 	background: #0c9eb1;
 	color: #fff;
 }
+
 /* room.css */
 .room-item {
 	position: relative;
@@ -140,12 +141,15 @@
 }
 
 .room-item.booked {
-	background-color: rgba(0, 0, 0, 0.5); /* Nền tối */
-	filter: grayscale(100%); /* Làm mờ hình ảnh */
+	background-color: rgba(0, 0, 0, 0.5);
+	/* Nền tối */
+	filter: grayscale(100%);
+	/* Làm mờ hình ảnh */
 }
 
 .room-item.booked img {
-	opacity: 0.7; /* Giảm độ sáng hình ảnh */
+	opacity: 0.7;
+	/* Giảm độ sáng hình ảnh */
 }
 
 .room-item .booked-overlay {
@@ -154,7 +158,8 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.7); /* Overlay đậm */
+	background: rgba(0, 0, 0, 0.7);
+	/* Overlay đậm */
 	color: #fff;
 	display: flex;
 	justify-content: center;
@@ -164,5 +169,6 @@
 	text-transform: uppercase;
 	z-index: 10;
 	opacity: 1;
-	pointer-events: none; /* Không cho tương tác */
+	pointer-events: none;
+	/* Không cho tương tác */
 }
