--- a/frontend2/src/assets/css/style.css
+++ b/frontend2/src/assets/css/style.css
@@ -1475,18 +1475,19 @@ ol {
 -------------------------*/
 
 .room-details-section {
-	padding-top: 60px;
+	padding-top: 30px;
 	padding-bottom: 80px;
 }
 
 .room-details-item {
-	margin-bottom: 50px;
+	margin-bottom: 10px;
 }
 
 .room-details-item img {
 	width: 100%;
-	height: 400px;
+	height: 500px;
 	margin-bottom: 40px;
+	border-radius: 20px;
 }
 
 .room-details-item .rd-text .rd-title {
@@ -1525,7 +1526,7 @@ ol {
 }
 
 .room-details-item .rd-text h2 {
-	color: #dfa974;
+	color: #000000;
 	font-weight: 700;
 	margin-bottom: 25px;
 }
@@ -1548,7 +1549,8 @@ ol {
 }
 
 .room-details-item .rd-text table tbody tr td.r-o {
-	width: 120px;
+	width: 160px;
+
 }
 
 .room-details-item .rd-text p {
@@ -1728,13 +1730,22 @@ ol {
 	display: inline-block;
 }
 
+.fullwi {
+	width: 100%;
+}
+
 .room-booking {
-	padding: 0 30px 0 40px;
+	padding: 30px 30px 40px 30px;
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+
 }
 
 .room-booking h3 {
 	color: #19191a;
 	margin-bottom: 30px;
+	padding-bottom: 10px;
+	border-bottom: solid;
 }
 
 .room-booking form .check-date {
